--- a/app/views/settings/_slack_settings.html.erb
+++ b/app/views/settings/_slack_settings.html.erb
@@ -9,6 +9,11 @@
 </p>
 
 <p>
+    	<label for="settings_push_token">Slack Push Token</label>
+    	<input type="text" id="settings_push_token" value="<%= settings['push_token'] %>" name="settings[push_token]" />
+</p>
+
+<p>
 	The channel can be changed on a per-project basis by creating a
 	<a href="/custom_fields/new?type=ProjectCustomField">project custom field</a> named "Slack Channel" (without quotes).
 </p>
